各ユーザーが参加する競技を取得するAPIを追加
